fixing image scaling on mobile

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -21,5 +21,8 @@ pre { border:solid 1px #c3c3c3;
     }
 
 
-img { border-radius:8px 8px 8px 8px
+img { border-radius:8px 8px 8px 8px;
+      max-width: 100%;
+      height: auto;
+      width: auto;
     }
